syntax = "proto2";

package securefs;

import "google/protobuf/descriptor.proto";

message ArgOption
{
    // The help message for the command line argument. Required.
    optional string doc = 1;
    // If true, this is a positional argument.
    optional bool positional = 2;
    // If set, then this is the alternative argument name.
    optional string alt_name = 3;
    // If the field is a message, then preappend this prefix to all its arguments to avoid collision.
    // Otherwise, the field name is the prefix.
    optional string prefix = 4;
    // Only useful if not positional.
    optional bool is_required = 5;

    oneof default_value
    {
        int64 default_int64 = 6;
        bool default_bool = 7;
        string default_string = 8;
    }
}

extend google.protobuf.FieldOptions
{
    optional ArgOption arg_option = 60056698;
}
